--- a/assets/style.css
+++ b/assets/style.css
@@ -111,7 +111,7 @@ nav a {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #8C750E;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
